# AI_Scout

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
01_Prod_specs/: AI_Scout_Product_Spec_v7.docx  AI_Scout_Product_Spec_v8.docx
01_Prod_specs/[Archive]/: AI_Scout_Product_Spec_v6.docx
02_Architecture/: 00_System_Overview.md  01_Git_Scanner_MVP.md  02_Data_Flow_Mapper.md
03_Documentation/: PROJECT_STATUS.md  SPRINT_LOG.md
aiscout/: __init__.py  cli.py
aiscout/engine/: code_analyzer.py  data_flow.py  enrichment.py  llm.py
aiscout/knowledge/: dependency_advisories.py  providers.py
aiscout/models/: __init__.py  assets.py
aiscout/report/: html.py  json_export.py
aiscout/report/templates/: report.html.j2
aiscout/scanners/: base.py  git_scanner.py
aiscout/web/: app.py
api/: index.py
scripts/: screenshot.py
tests/: conftest.py  test_cli.py  test_code_analyzer.py  test_data_flow.py  test_dependency_advisories.py  test_enrichment.py  test_git_scanner.py  test_llm_engine.py  test_models.py  test_regression.py  test_report.py
tests/fixtures/: sample_chatbot.py  sample_package.json  sample_py.py  sample_requirements.txt
tests/fixtures/sprint2/: azure_chat.py  docker-compose.yml  finetune_lora.py  mcp.json
tests/fixtures/sprint3/: llm_config.yaml  requirements.txt
tests/fixtures/sprint3/.github/workflows/: llm-review.yml
tests/regression/: golden.json  golden_sprint2.json  golden_sprint3.json
