[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiscout"
version = "0.1.0"
description = "AI Scout — Enterprise AI Discovery & Security Assessment Tool"
requires-python = ">=3.11"
license = "BUSL-1.1"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
aiscout = "aiscout.cli:cli"

[tool.setuptools.packages.find]
include = ["aiscout*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
